@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 63*3;
+use Test::More tests => 64*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -43,7 +43,7 @@ my @tagsets =
     'la::conll', 'la::it', 'la::itconll',
     'lt::jablonskis', 'lt::multext',
     'mt::mlss',
-    'mul::google', 'mul::upos',
+    'mul::google', 'mul::upos', 'mul::unimorph',
     'nl::cgn', 'nl::conll',
     'no::conll',
     'pl::ipipan',
